tests/ui/parser/bad-name.rs
//@error-in-other-file: expected

fn main() {
  let x.y::<isize>.z foo;
}
